Couleur sur la liste des réservations
FossilOrigin-Name: bc68333308a221b9af3a4676e5cdb39f25b51f2f

--- a/reservations/www/admin/style.css
+++ b/reservations/www/admin/style.css
@@ -100,3 +100,9 @@ dl.info {
 	font-size: 1rem;
 	margin: 2em 0;
 }
+
+.slots .hour b {
+	background: #eef;
+	border-radius: .5em;
+	padding: .5rem;
+}
