--- a/caisse/www/admin/style.css
+++ b/caisse/www/admin/style.css
@@ -81,3 +81,50 @@ ul.actions li a {
 ul.actions {
 	padding: 0;
 }
+
+#user_rename {
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	background: rgba(0, 0, 0, 0.7);
+	padding: 1em;
+	z-index: 10000;
+	text-align: center;
+}
+
+#user_rename li {
+	max-width: 40rem;
+	background: #ddd;
+	padding: .5rem;
+	border: .1rem solid #ccc;
+	margin: .5rem auto;
+	border-radius: .5rem;
+	text-align: left;
+}
+
+#user_rename li:hover {
+	background: #ccf;
+	padding: .5rem;
+	border: .1rem solid #99f;
+	cursor: pointer;
+}
+
+#user_rename li:hover h3 {
+	color: darkred;
+	text-decoration: underline;
+}
+
+
+#user_rename li h5 {
+	float: right;
+	border: .1rem solid #999;
+	padding: .5rem;
+	border-radius: .5rem;
+	background: #fff;
+}
+
+#user_rename input {
+	font-size: 2em;
+}
