Implement rename of product names in tabs
FossilOrigin-Name: 8e991d2a846239a5f8362f6e579c08383aa89840

--- a/caisse/www/admin/style.css
+++ b/caisse/www/admin/style.css
@@ -94,6 +94,12 @@ input[name="q"] {
 	opacity: 0.5;
 }
 
+.pos .items th button {
+	font-size: 10px;
+	padding: .2em .3em;
+	border-width: 1px;
+}
+
 #user_rename {
 	position: fixed;
 	left: 0;
