Use the purchase price to estimate inventory value
FossilOrigin-Name: 8b365c181e3b7b728c588fcf3a40a1071a09a0c6

--- a/caisse/admin/style.css
+++ b/caisse/admin/style.css
@@ -68,6 +68,10 @@ input[name="q"] {
 	line-height: 1rem;
 }
 
+.pos .list thead td {
+	text-align: center;
+}
+
 .list small.cat {
 	font-size: 7pt;
 	font-weight: normal;
