--- a/caisse/admin/style.css
+++ b/caisse/admin/style.css
@@ -17,6 +17,7 @@
 .pos .products button {
     background: #eee;
     border: .2rem solid #ddd;
+    border-color: hsl(var(--cat-hue), 40%, 75%);
 	border-radius: .5rem;
 	padding: .5rem;
 	margin: .3rem;
@@ -70,6 +71,45 @@ input[name="q"] {
 
 .pos .list thead td {
 	text-align: center;
+}
+
+.pos .products ul {
+	font-size: .8em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-top: .5em;
+}
+
+.pos .products ul a {
+	text-decoration: none;
+	color: #333;
+	padding: .2em .4em;
+	border-radius: .3em;
+	margin: .3em;
+	display: inline-block;
+	transition: background .2s, color .2s;
+	background: #ccc;
+	background: hsl(var(--cat-hue), 40%, 85%);
+	border: 1px solid #ccc;
+	box-shadow: 0px 0px 5px #ccc;
+}
+
+.pos .products ul .current a {
+	color: #fff;
+	background: hsl(var(--cat-hue), 30%, 55%);
+}
+
+.pos .products ul .current a[data-cat=""] {
+	background: #666;
+}
+
+.pos .products ul a:hover {
+	text-decoration: underline;
+	background: hsl(var(--cat-hue), 20%, 80%);
+	border-color: #fff;
+	color: darkred;
+	box-shadow: 0px 0px 5px #999;
 }
 
 .list small.cat {
