--- a/caisse/admin/style.css
+++ b/caisse/admin/style.css
@@ -5,9 +5,31 @@
 }
 
 .pos header {
+	margin-bottom: 1rem;
+}
+
+.pos header .title {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 1rem;
+}
+
+.pos header .id {
+	color: #666;
+	font-weight: normal;
+	vertical-align: middle;
+	display: inline-flex;
+	align-items: center;
+	margin-right: auto;
+}
+
+.pos header .actions form {
+	display: flex;
+	justify-content: space-between;
+	gap: .7rem;
+}
+
+.pos header .actions a, .pos header .actions button {
+	margin: 0;
 }
 
 .pos .products {
@@ -119,8 +141,38 @@ input[name="q"] {
 	display: block;
 }
 
+.tabs .pos-tabs {
+	display: flex;
+	align-items: end;
+	justify-content: space-between;
+	margin-bottom: .8em;
+}
+
+.tabs .pos-tabs ul {
+	padding: .5rem;
+	margin: 0;
+	border: none;
+	max-height: 4.2em;
+	overflow: hidden;
+	position: relative;
+	justify-content: start;
+}
+
+.tabs .pos-tabs .plus {
+	margin-top: 1em;
+}
+
+.tabs .pos-tabs.open ul {
+	overflow: unset;
+	max-height: unset;
+}
+
 .tabs .pos-tabs li {
-	padding: .2rem .1rem;
+	padding: .1rem;
+	margin: 0;
+}
+
+.tabs .pos-tabs li a {
 	margin: 0;
 }
 
@@ -128,15 +180,11 @@ input[name="q"] {
 	display: none;
 }
 
-.tabs .pos-tabs {
-	padding: 0;
-	border: none;
-}
-
 .tabs .pos-tabs li.closed a {
 	text-decoration: line-through;
 	opacity: 0.5;
 }
+
 
 .pos .items th button {
 	font-size: 10px;
