--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -1,22 +1,44 @@
+.chat-users li a {
+	padding: .3em;
+	display: inline-flex;
+	text-decoration: none;
+	gap: .5em;
+	font-size: 1.2em;
+	align-items: center;
+}
+
+.chat-users li a img {
+	width: 24px;
+	margin: 0;
+}
+
+.chat-users li a figure {
+	float: none;
+	margin: 0;
+}
+
 body {
 	overflow: hidden;
 }
 
 #chat {
 	display: grid;
-	grid-template-areas: "c cc"
-		"m cc"
-		"cb cc";
-	grid-template-columns: 1fr 12em;
+	grid-template-areas: "cc c"
+		"cc m"
+		"cc cb";
+	grid-template-columns: 13em 1fr;
 	grid-template-rows: 5em 1fr 5em;
 	height: 100vh;
 	margin-left: -10px;
+	margin-right: -15px;
 }
 
 #chat .channel {
 	grid-area: c;
 	border-bottom: 2px solid rgba(var(--gSecondColor), 0.4);
 	padding: .5em;
+	display: grid;
+	grid-template-columns: 1fr 26em;
 }
 
 #chat .channel div {
@@ -25,7 +47,34 @@ body {
 }
 
 #chat .channel aside {
-	float: right;
+	display: inline-flex;
+	gap: .5em;
+	font-size: .9em;
+	justify-content: flex-end;
+	align-items: stretch;
+}
+
+#chat .channel aside a {
+	margin: 0;
+	height: 1.2em;
+}
+
+#chat .channel h5 {
+	text-align: right;
+	font-weight: normal;
+	font-size: .9em;
+	margin-top: .8em;
+	color: var(--gBorderColor);
+}
+
+#chat .channel h2 {
+	display: flex;
+	gap: .5em;
+	align-items: center;
+}
+
+#chat .channel img {
+	width: 32px;
 }
 
 #chat .messages {
@@ -42,9 +91,14 @@ body {
 }
 
 #chat .channels {
-	padding: .5em 0;
 	grid-area: cc;
-	border-left: 2px solid rgba(var(--gSecondColor), 0.4);
+	border-right: 2px solid rgba(var(--gSecondColor), 0.4);
+	display: flex;
+	flex-direction: column;
+}
+
+#chat .channels aside {
+	margin: .5em 0;
 }
 
 .channels ul {
@@ -58,7 +112,6 @@ body {
 
 .channels ul li a {
 	display: block;
-	border-radius: 0 .5em .5em 0;
 	padding: .2em .5em;
 }
 
@@ -106,6 +159,10 @@ body {
 	visibility: hidden;
 }
 
+.messages article {
+	position: relative;
+}
+
 .messages article:hover {
 	background: var(--gLightBackgroundColor);
 }
@@ -119,14 +176,18 @@ body {
 	font-size: .8em;
 }
 
-.messages figure {
+.chat-avatar img {
+	border-radius: .3rem;
+	vertical-align: middle;
+}
+
+#chat .messages .chat-avatar {
 	float: left;
 	margin-right: 18px;
 }
 
-.messages figure img {
+#chat .messages .chat-avatar img {
 	width: 32px;
-	border-radius: .3em;
 	margin-top: 5px;
 }
 
@@ -140,7 +201,6 @@ body {
 	display: block;
 }
 
-
 .messages::-webkit-scrollbar {
     background: none;
     width: 10px;
@@ -148,4 +208,49 @@ body {
 
 .messages::-webkit-scrollbar-thumb {
     background: rgba(var(--gSecondColor), 0.3);
+}
+
+.messages article footer {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: none;
+}
+
+.messages article footer {
+	position: absolute;
+	top: 0;
+	right: .2em;
+	display: none;
+	z-index: 1000;
+	padding: .2em .3em;
+	font-size: .9em;
+	border-radius: .5em;
+	background: var(--gLightBackgroundColor);
+	box-shadow: 0px 0px 5px var(--gBorderColor);
+}
+
+.messages article footer button {
+	margin: 0;
+}
+
+.messages article:hover footer {
+	display: block;
+}
+
+span.chat-status {
+	border-radius: 50%;
+	width: .5em;
+	height: .5em;
+	text-indent: -50em;
+	overflow: hidden;
+	display: inline-block;
+}
+
+span.chat-status.online {
+	background: green;
+}
+
+span.chat-status.offline {
+	background: #999;
 }
