Split relationship between users and channels
FossilOrigin-Name: ea2d96f839d9876e7ad769f373f01c2d34e0f384

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -230,12 +230,21 @@ body {
 	box-shadow: 0px 0px 5px var(--gBorderColor);
 }
 
-.messages article footer button {
+.messages article footer button, .messages article footer a {
 	margin: 0;
+	border: none;
+	background: none;
+	box-shadow: none;
+	text-decoration: none;
+}
+
+.messages article footer button:hover, .messages article footer a:hover {
+	color: darkred;
+	background: none;
 }
 
 .messages article:hover footer {
-	display: block;
+	display: flex;
 }
 
 span.chat-status {
