--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -127,15 +127,32 @@ body {
 	gap: .5em;
 }
 
+.chatbox header {
+	display: flex;
+	flex-direction: column;
+	justify-content: stretch;
+	align-items: stretch;
+	height: 100%;
+	width: 2em;
+	gap: .3em;
+}
+
+.chatbox header button {
+	margin: 0;
+	width: 100%;
+	height: 2em;
+}
+
 .chatbox textarea {
-	width: calc(100% - 8em);
+	width: calc(100% - 4em);
 	display: block;
+	resize: none;
 }
 
 .chatbox button {
 	display: block;
 	margin: 0;
-	width: 8em;
+	width: 4em;
 	margin-left: auto;
 	align-self: stretch;
 }
@@ -219,7 +236,8 @@ body {
 
 .messages article footer {
 	position: absolute;
-	top: 0;
+	top: auto;
+	bottom: .2em;
 	right: .2em;
 	display: none;
 	z-index: 1000;
