Implement Jitsi chat
FossilOrigin-Name: b38851896471da3cd0da1cc0b746642663d2ce2a

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -410,3 +410,10 @@ nav.reactions button.me {
 nav.reactions button span {
 	font-size: .9em;
 }
+
+#jitsi {
+	border-radius: .5em;
+	overflow: hidden;
+	width: 90%;
+	height: 90vh;
+}
