Disable features, improve markdown rendering
FossilOrigin-Name: 24061c8b7a67db74d3da3062c8859c14415f18b0

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -278,10 +278,26 @@ body {
 	padding: .3em 0;
 }
 
-.messages .web-content br {
+.messages .web-content > br {
 	margin-top: .5em;
 	content: " ";
 	display: block;
+}
+
+.messages .web-content blockquote {
+	border-left: 5px solid var(--gLightBorderColor);
+	background: var(--gLightBackgroundColor);
+	padding: 5px;
+	margin: 0;
+	padding-left: 10px;
+}
+
+.messages .web-content code {
+	border: 1px solid var(--gLightBorderColor);
+	padding: 5px;
+	display: inline-block;
+	white-space: pre;
+	border-radius: 5px;
 }
 
 .messages::-webkit-scrollbar {
