Allow anonymous users, fix some rendering issues
FossilOrigin-Name: a65c40aa7190055b8f9f209e5ba8e68df45b96ba

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -25,7 +25,8 @@
 }
 
 body {
-	overflow: hidden;
+	overflow: auto;
+	padding: 0;
 }
 
 #chat {
@@ -38,6 +39,10 @@ body {
 	height: 100vh;
 	margin-left: -10px;
 	margin-right: -15px;
+}
+
+body:has(#sticky-alert) #chat {
+	height: calc(100vh - 2em);
 }
 
 #chat .channel {
