Fix public layout
FossilOrigin-Name: 522d0022c0e8e6a4df9fc7c73f8550bc80ee1922

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -48,11 +48,19 @@ body.sticky #chat {
 body.public:has(#chat) main {
 	max-width: unset;
 	margin: 0;
+	flex: 1 1 auto;
 }
 
 body.public #chat {
 	margin: 0;
-	height: calc(100vh - 8em);
+	height: 100%;
+}
+
+body.public:has(#chat) {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	justify-content: stretch;
 }
 
 body.public:has(#chat) header.public {
