Use public file storage for public channels
FossilOrigin-Name: 797ee7691b3bc4f5c8a807f6204796f0f8c5652c

--- a/chat/public/chat.css
+++ b/chat/public/chat.css
@@ -41,26 +41,18 @@ body {
 	margin-right: -15px;
 }
 
-body.sticky #chat {
+body.sticky:not(.public) #chat {
 	height: calc(100vh - 2em);
 }
 
 body.public:has(#chat) main {
 	max-width: unset;
 	margin: 0;
-	flex: 1 1 auto;
 }
 
 body.public #chat {
+	height: 90vh;
 	margin: 0;
-	height: 100%;
-}
-
-body.public:has(#chat) {
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-	justify-content: stretch;
 }
 
 body.public:has(#chat) header.public {
