--- a/pim/admin/calendar.css
+++ b/pim/admin/calendar.css
@@ -185,3 +185,9 @@ table.categories .color {
 	margin-left: 1em;
 	background: hsl(var(--hue), 50%, 75%);
 }
+
+input.auto-animation, select.auto-animation {
+	outline: 2px solid darkorange;
+	box-shadow: 0px 0px 10px 3px darkorange;
+	transition: .5s;
+}
