Implement upload of events
FossilOrigin-Name: 55c93183ace9fd279b6d3a18274c1e0a5d149f0e

--- a/pim/admin/calendar.css
+++ b/pim/admin/calendar.css
@@ -10,20 +10,27 @@ body.calendar main {
 }
 
 .months {
-	display: flex;
+	max-width: unset;
 }
 
 .months a {
-	width: 15%;
 	display: inline-flex;
 	justify-content: center;
 }
 
+.months a.year {
+	width: 4rem;
+}
+
+.months a.month {
+	width: 7rem;
+}
+
 .months a.current {
 	font-weight: bold;
-	width: calc(100% - 2em);
 	font-size: 1.3em;
-	flex-grow: 1;
+	width: 12rem;
+	padding: .1rem;
 }
 
 table.calendar {
