--- a/pim/admin/contacts/contacts.css
+++ b/pim/admin/contacts/contacts.css
@@ -1,9 +1,13 @@
-table.list td.photo {
+table.list td.avatar {
 	width: 70px;
 	text-align: center;
 }
 
-table.list td.photo img {
+table.list td.avatar img {
 	max-width: 56px;
 	border-radius: 10%;
+}
+
+table.list td.avatar:not(.photo) img {
+	opacity: 0.5;
 }
