Improve efficiency of calendar holidays
FossilOrigin-Name: 739058a23adc8c179ecd556e939d85c82f8979cf

--- a/pim/admin/calendar.css
+++ b/pim/admin/calendar.css
@@ -9,8 +9,15 @@ body.calendar main {
 	flex-direction: column;
 }
 
-.months {
+body.calendar .tabs {
+	display: flex;
+	flex-direction: row-reverse;
+	flex-wrap: wrap;
+}
+
+nav.tabs .months {
 	max-width: unset;
+	flex: 1 1;
 }
 
 .months a {
